@@ -1,4 +1,5 @@
 0.4.2 - currently working on
+- [#2152] Change: Skip locale config check tests in Windows
 - [#2151] Fix: tx_oelib_templatehelper::getSubpartForCallback has to be protected in PHP 5.3
 - [#2130] Change: countRecords should only find dummy records
 - [#2098] Change: Make securePiVars set non-existent piVars to secure to zero
